<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center|center_vertical"
        android:text="@string/welcome"
        />

    <TextView
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center|center_vertical"
        android:text="@string/login_page"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/username"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtUsername"
            android:hint="@string/enter_username"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/password"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:id="@+id/txtPassword"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button android:id="@+id/btnSignIN"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="70dp"
        android:onClick="signInPressed"
        android:text="@string/sign_in"/>

    <Button
        android:id="@+id/btnSignUP"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:onClick="signUpPressed"
        android:text="@string/sign_up"/>

    <Button
        android:id="@+id/btnForgetPassword"
        android:layout_width="270dp"
        android:layout_marginLeft="70dp"
        android:layout_height="wrap_content"
        android:onClick="forgotPressed"
        android:text="@string/forgot_password" />

    <TextView
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center|center_vertical"
        android:text="@string/all_rights_reserved"
        />

</LinearLayout>