<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
tools:context=".SelectRoomActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logged_user" />

            <TextView
                android:id="@+id/userNameDisplay"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/user_score" />

            <TextView
                android:id="@+id/scoreDisplay"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>



    <TextView
    android:textSize="30sp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:layout_gravity="center|center_vertical"
    android:text="@string/game_rooms"
    />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2"
        android:gravity="center">


        <TableRow
            android:background="#000000"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="0"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" Room"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:background="#FFFFFF"
                android:textStyle="bold"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Status "
                android:layout_margin="1dp"
                android:layout_column="1"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Action"
                android:layout_margin="1dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_column="2"
                />
        </TableRow>

        <TableRow
            android:background="#000000"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="0.01"
            >

            <TextView
                android:id="@+id/roomName_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" room1"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:background="#FFFFFF"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/roomStatus_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" empty"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:background="#FFFFFF"
                android:gravity="center"
                />

            <Button android:id="@+id/btnJoinRoom1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:onClick="join1Pressed"
            android:layout_marginLeft="0dp"
            android:text="@string/join"/>

        </TableRow>



        <TableRow
            android:background="#000000"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="0.01"
            >

            <TextView
                android:id="@+id/roomName_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" room2"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:background="#FFFFFF"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/roomStatus_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" empty"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:background="#FFFFFF"
                android:gravity="center"
                />

            <Button android:id="@+id/btnJoinRoom2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:onClick="join2Pressed"
                android:text="@string/join"/>

        </TableRow>

        <TableRow
            android:background="#000000"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"
            android:layout_weight="0.01"
            >

            <TextView
                android:id="@+id/roomName_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" room3"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:background="#FFFFFF"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/roomStatus_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=" empty"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:background="#FFFFFF"
                android:gravity="center"
                />

            <Button android:id="@+id/btnJoinRoom3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="0dp"
                android:onClick="join3Pressed"
                android:text="@string/join"/>


        </TableRow>


    </TableLayout>

    <TextView
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center|center_vertical"
        android:text="@string/top_players"
        />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_marginTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1"
        android:gravity="center">



    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" Player"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Score "
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            />


    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.01"
        >

        <TextView
            android:id="@+id/topUser_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" player1"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/topScore_0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" score1"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            />

    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.01"
        >

        <TextView
            android:id="@+id/topUser_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" player2"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/topScore_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" score2"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            />






    </TableRow>

    <TableRow
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_weight="0.01"
        >

        <TextView
            android:id="@+id/topUser_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" player3"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:background="#FFFFFF"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/topScore_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="score3"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:background="#FFFFFF"
            android:gravity="center"
            />




    </TableRow>

    </TableLayout>


    <TextView
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center|center_vertical"
        android:text="@string/all_rights_reserved"
        />

</LinearLayout>